# ZleedApi

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  index.js  jsconfig.json  package-lock.json  package.json
data/v1/: changelog.json
requestExamples/: auth.http
routes/: _versions.js
routes/v1/: _routes.js  changelog.js  swagger.js
routes/v1/auth/: login.js  register.js
routes/v1/user/: @me.js
src/: main.rs
src/routes/: index.rs  mod.rs  not_found.rs
src/routes/v1/: changelog.rs  mod.rs  rtmp.rs  swagger.rs
src/routes/v1/auth/: register.rs
src/routes/v1/user/: me.rs
src/structs/: index.rs  mod.rs  not_found.rs
src/structs/db/: user.rs
tools/: models.js  snowflake.js  validators.js
